unpackaged/main/default/objects/CoreOrder__c/CoreOrder__c.object-meta.xml
<CustomObject>
    <description>Core Order Data</description>
    <label>CoreOrder</label>
    <nameField>
        <label>CoreOrder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CoreOrders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>