unpackaged/main/default/objects/CoreOrder__c/fields/Booth_Number__c.field-meta.xml
<CustomField>
    <fullName>Booth_Number__c</fullName>
    <label>Booth Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>