unpackaged/main/default/objects/CoreOrder__c/fields/Exhibitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Name__c</fullName>
    <label>Exhibitor Name</label>
    <length>240</length>
    <type>Text</type>
</CustomField>