unpackaged/main/default/objects/CoreOrder__c/fields/Order_Line_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Creation_Date__c</fullName>
    <label>Order Line Creation Date</label>
    <type>Date</type>
</CustomField>