unpackaged/main/default/objects/CoreOrder__c/fields/Ordered_Item__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Item__c</fullName>
    <label>Ordered Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>