unpackaged/main/default/objects/CoreOrder__c/fields/Ordered_Qunatity__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Qunatity__c</fullName>
    <label>Ordered Qunatity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>