unpackaged/main/default/objects/CoreOrder__c/fields/Show_Name__c.field-meta.xml
<CustomField>
    <fullName>Show_Name__c</fullName>
    <label>Show Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>